# cpp-linter

./: .buildinfo  .gitattributes  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  README.rst  building_docs.html  cli_args.html  contributing.html  cspell.config.yml  genindex.html  index.html  noxfile.py  objects.inv  permissions.html  pr_review_caveats.html  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  searchindex.js  setup.py
.doctrees/: building_docs.doctree  cli_args.doctree  contributing.doctree  environment.pickle  index.doctree  permissions.doctree  pr_review_caveats.doctree
.doctrees/API-Reference/: cpp_linter.clang_format_xml.doctree  cpp_linter.clang_tidy.doctree  cpp_linter.clang_tidy_yml.doctree  cpp_linter.clang_tools.clang_format.doctree  cpp_linter.clang_tools.clang_tidy.doctree  cpp_linter.clang_tools.doctree  cpp_linter.clang_tools.patcher.doctree  cpp_linter.cli.doctree  cpp_linter.common_fs.doctree  cpp_linter.common_fs.file_filter.doctree  cpp_linter.doctree  cpp_linter.git.doctree  cpp_linter.git.git_str.doctree  cpp_linter.loggers.doctree  cpp_linter.rest_api.doctree  cpp_linter.rest_api.github_api.doctree  cpp_linter.run.doctree  cpp_linter.thread_comments.doctree
.github/: FUNDING.yml  cliff.toml  dependabot.yml  labeler.yml  requirements.txt  zizmor.yml
.github/workflows/: analyze-workflows.yml  build-docs.yml  codeql.yml  docs.yml  labeler.yml  pre-commit-hooks.yml  pre-commit.yml  publish-pypi.yml  release-drafter.yml  release.yml  run-dev-tests.yml  stale.yml  tag-release.nu  tag-release.yml  tests.yml  unreleased-summary.yml
API-Reference/: cpp_linter.clang_format_xml.html  cpp_linter.clang_tidy.html  cpp_linter.clang_tidy_yml.html  cpp_linter.clang_tools.clang_format.html  cpp_linter.clang_tools.clang_tidy.html  cpp_linter.clang_tools.html  cpp_linter.clang_tools.patcher.html  cpp_linter.cli.html  cpp_linter.common_fs.file_filter.html  cpp_linter.common_fs.html  cpp_linter.git.git_str.html  cpp_linter.git.html  cpp_linter.html  cpp_linter.loggers.html  cpp_linter.rest_api.github_api.html  cpp_linter.rest_api.html  cpp_linter.run.html  cpp_linter.thread_comments.html
_modules/: cpp_linter.html  index.html
_modules/cpp_linter/: clang_format_xml.html  clang_tidy.html  clang_tidy_yml.html  clang_tools.html  cli.html  common_fs.html  git.html  loggers.html  rest_api.html  run.html  thread_comments.html
_modules/cpp_linter/clang_tools/: clang_format.html  clang_tidy.html  patcher.html
_modules/cpp_linter/common_fs/: file_filter.html
_modules/cpp_linter/git/: git_str.html
_modules/cpp_linter/rest_api/: github_api.html
_sources/: cli_args.rst.txt  index.rst.txt  permissions.rst.txt  pr_review_caveats.rst.txt
_sources/API-Reference/: cpp_linter.clang_format_xml.rst.txt  cpp_linter.clang_tidy.rst.txt  cpp_linter.clang_tidy_yml.rst.txt  cpp_linter.clang_tools.clang_format.rst.txt  cpp_linter.cli.rst.txt  cpp_linter.common_fs.rst.txt  cpp_linter.git.rst.txt  cpp_linter.loggers.rst.txt  cpp_linter.rest_api.github_api.rst.txt  cpp_linter.rest_api.rst.txt  cpp_linter.rst.txt  cpp_linter.run.rst.txt  cpp_linter.thread_comments.rst.txt
_static/: documentation_options.js  extra_css.css  sphinx_immaterial_theme.1cd64e305be4c6cbd.min.css  sphinx_immaterial_theme.2dea90d4fa46c5d91.min.css  sphinx_immaterial_theme.35cafed5745379397.min.css  sphinx_immaterial_theme.4fc41a14af31202c6.min.css  sphinx_immaterial_theme.6bf5b0c96e0d977c2.min.css  sphinx_immaterial_theme.6c9c911ad80595060.min.css  sphinx_immaterial_theme.752ffd597a2cbce58.min.css  sphinx_immaterial_theme.817d7a48a831c3c43.min.css  sphinx_immaterial_theme.864ac64b8efeb1910.min.css  sphinx_immaterial_theme.a82c6991202dc3154.min.css  sphinx_immaterial_theme.b495398fcfe01f784.min.css  sphinx_immaterial_theme.d2332b99b55d2a436.min.css
_static/stylesheets/: main.b0359c04.min.css.map  palette.92c9fe4a.min.css.map  sphinx_immaterial_theme.c067037dd3d9452f1.min.css
cpp_linter/: __init__.py  clang_format_xml.py  clang_tidy.py  clang_tidy_yml.py  cli.py  common_fs.py  git.py  git_lib.py  git_parse.py  git_str.py  loggers.py  run.py  thread_comments.py
cpp_linter/clang_tools/: __init__.py  clang_format.py  clang_tidy.py  patcher.py
cpp_linter/common_fs/: __init__.py  file_filter.py
cpp_linter/git/: __init__.py  git_str.py
cpp_linter/rest_api/: __init__.py  github_api.py
docs/: building_docs.rst  conf.py  index.rst  permissions.rst  pr_review_caveats.rst  requirements.txt
docs/API-Reference/: cpp_linter.clang_format_xml.rst  cpp_linter.clang_tidy.rst  cpp_linter.clang_tools.clang_tidy.rst  cpp_linter.clang_tools.patcher.rst  cpp_linter.clang_tools.rst  cpp_linter.common_fs.file_filter.rst  cpp_linter.git.git_str.rst  cpp_linter.git.rst  cpp_linter.git_lib.rst  cpp_linter.git_parse.rst  cpp_linter.rst  cpp_linter.run.rst  cpp_linter.thread_comments.rst
docs/_static/: extra_css.css
tests/: test_cli_args.py  test_comment_length.py  test_git_lib.py  test_git_str.py  test_misc.py  test_parse_clang_tidy_stdout.py  test_rate_limits.py
tests/capture_tools_output/: event_files.json  expected_result1.json  expected_result2.json  test_database_path.py  test_tools_output.py
tests/capture_tools_output/chocolate-doom/chocolate-doom/: expected-result_710915-1.json  expected-result_710915-2.json
tests/capture_tools_output/cpp-linter/cpp-linter/: test_git_lib.patch
tests/comments/: pr_22.json  pr_comments_pg1.json  pr_comments_pg2.json  push_8d68756375e0483c7ac2b4d6bbbece420dbbb495.json  push_comments_8d68756375e0483c7ac2b4d6bbbece420dbbb495.json  test_comments.py
tests/demo/: .clang-tidy
tests/ignored_paths/: test_ignored_paths.py
tests/list_changes/: patch.diff  pull_request_files_pg1.json  pull_request_files_pg2.json  push_files_pg1.json  push_files_pg2.json  test_get_file_changes.py
tests/reviews/: .clang-tidy  pr_27.diff  pr_27.json  pr_review_comments.json  pr_reviews.json  pr_reviews_graphql.json  test_pr_review.py
tests/test_git_lib/: test_git_lib.py
(+22 files in other folders)
