[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cpp-linter"
description = "Run clang-format and clang-tidy on a batch of files."
readme = "README.rst"
keywords = ["clang", "clang-tools", "linter", "clang-tidy", "clang-format"]
license = "MIT"
authors = [
    { name = "Brendan Doherty", email = "2bndy5@gmail.com" },
    { name = "Xianpeng Shen", email = "xianpeng.shen@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
    # https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
]
dynamic = ["version"]
dependencies = [
    "pygit2>=1.15.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[project.scripts]
cpp-linter = "cpp_linter:main"

[project.urls]
source =  "https://github.com/cpp-linter/cpp-linter"
tracker = "https://github.com/cpp-linter/cpp-linter/issues"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[tool.setuptools]
zip-safe = false
packages = ["cpp_linter"]

[tool.setuptools_scm]
# It would be nice to include the commit hash in the version, but that
# can't be done in a PEP 440-compatible way.
version_scheme= "no-guess-dev"
# Test PyPI does not support local versions.
local_scheme = "no-local-version"
fallback_version = "0.0.0"
version_file = "cpp_linter/_version.py"

[tool.mypy]
show_error_codes = true
show_column_numbers = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv --durations=8 --color=yes  -r=s"
testpaths = ["tests"]
markers = [
    "no_clang: marks tests as independents of any clang version",
]

[tool.coverage]
[tool.coverage.run]
dynamic_context = "test_function"
# These options are useful if combining coverage data from multiple tested envs
parallel = true
relative_files = true
source = ["cpp_linter/", "tests/"]
concurrency = ["thread", "multiprocessing"]

[tool.coverage.json]
pretty_print = true

[tool.coverage.html]
show_contexts = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don\'t complain about missing debug-only code:
    "def __repr__",
    # the point of unit tests is to test parts of main()
    "def main",
    # ignore any branch that makes the module executable
    'if __name__ == "__main__"',
    # ignore missing implementations in an abstract class
    "raise NotImplementedError",
    # ignore the local specific debug statement related to not having rich installed
    "if not FOUND_RICH_LIB",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "nox>=2025.5.1",
    "pre-commit>=4.2.0",
    "rich>=14.0.0",
    "ruff>=0.11.12",
    "types-requests>=2.32.0.20250515",
]
docs = [
    "sphinx-immaterial>=0.12.5",
]
test = [
    "coverage[toml]>=7.8.2",
    "meson>=1.8.1",
    "pytest>=8.3.5",
    "requests-mock>=1.12.1",
]
